--- a/index.html
+++ b/index.html
@@ -521,6 +521,25 @@
 
                         <fieldset class="border p-4 rounded">
                             <legend class="font-bold text-lg px-2 mb-2">حسب الشخصية</legend>
+
+                            <fieldset class="border p-4 rounded">
+                                <legend class="font-bold text-lg px-2 mb-2">الأبطال</legend>
+                                <label class="flex items-center space-x-2">
+                                    <input type="checkbox" v-model="filterKaitoKidEpisodes" class="scale-150">
+                                    <span class="px-2 font-bold">كايتو كيد ({{ KaitoKidEpisodesCount }})</span>
+                                </label>
+                                <br />
+                                <label class="flex items-center space-x-2">
+                                    <input type="checkbox" v-model="filterHeijiHattoriEpisodes" class="scale-150">
+                                    <span class="px-2 font-bold">هيجي هاتوري ({{ HeijiHattoriEpisodesCount }})</span>
+                                </label>
+                                <br />
+                                <label class="flex items-center space-x-2">
+                                    <input type="checkbox" v-model="filterAkaiShuichiEpisodes" class="scale-150">
+                                    <span class="px-2 font-bold">أكاي شويتشي ({{ AkaiShuichiEpisodesCount }})</span>
+                                </label>
+                            </fieldset>
+
                             <label class="flex items-center space-x-2">
                                 <input type="checkbox" v-model="filterKaitoKidEpisodes" class="scale-150">
                                 <span class="px-2 font-bold">كايتو كيد ({{ KaitoKidEpisodesCount }})</span>
