--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                         <fieldset class="border p-4 rounded">
                             <legend class="font-bold text-lg px-2 mb-2">حسب الشخصية</legend>
 
-                            <fieldset class="border p-4 rounded">
+                            <!-- <fieldset class="border p-4 rounded">
                                 <legend class="font-bold text-lg px-2 mb-2">الأبطال</legend>
                                 <label class="flex items-center space-x-2">
                                     <input type="checkbox" v-model="filterKaitoKidEpisodes" class="scale-150">
@@ -538,7 +538,7 @@
                                     <input type="checkbox" v-model="filterAkaiShuichiEpisodes" class="scale-150">
                                     <span class="px-2 font-bold">أكاي شويتشي ({{ AkaiShuichiEpisodesCount }})</span>
                                 </label>
-                            </fieldset>
+                            </fieldset> -->
 
                             <label class="flex items-center space-x-2">
                                 <input type="checkbox" v-model="filterKaitoKidEpisodes" class="scale-150">
