--- a/index.html
+++ b/index.html
@@ -687,12 +687,13 @@
 
         <!-- Table -->
         <div v-if="loading" class="text-center py-4">
-            <div class="spinner-border animate-spin inline-block w-10 h-10 border-4 border-blue-500 border-t-transparent rounded-full relative">
-                <span class="absolute inset-0 flex items-center justify-center text-sm font-bold text-blue-500">
-                    {{ loadingPercentage }}%
-                </span>
+            <!-- Spinner -->
+            <div class="spinner-border animate-spin inline-block w-8 h-8 border-4 border-blue-500 border-t-transparent rounded-full"></div>
+            <!-- Loading Percentage -->
+            <div class="mt-2 text-sm font-bold text-blue-500">
+                {{ loadingPercentage }}%
             </div>
-        </div>        
+        </div>              
         <div v-else>
             <table class="min-w-full border-collapse border border-gray-300">
                 <thead>
