--- a/x1d4m7b3/index.html
+++ b/x1d4m7b3/index.html
@@ -5,85 +5,163 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>403</title>
   <style>
-$font: 'Poppins', sans-serif;
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans|Nova+Mono');
+:root {
+  --font-header: 'Nova Mono', monospace;
+  --font-text: 'Open Sans', sans-serif;
+  --color-theme: #F1EEDB;
+  --color-bg: #282B24;
+
+  --animation-duration: 40s;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	family: $font;
-		background-image: linear-gradient(45deg, #f6d200 25%, #181617 25%, #181617 50%, #f6d200 50%, #f6d200 75%, #181617 75%, #181617 100%);
+  width: 100%;
+  font-family: var(--font-text);
+  color: var(--color-theme);
+  background: var(--color-bg);
+  overflow: hidden;
+}
+.container {
+  text-align: center;
+  margin: 1rem 0.5rem 0;
+}
+.container h1 {
+  font-family: var(--font-header);
+  font-size: calc(4rem + 2vw);
+	text-transform: uppercase;
+}
+.container p {
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-size: 2rem;
+  margin: 1.5rem 0 3rem;
+}
+svg.keyhole {
+  height: 82px;
+  width: 82px;
+  opacity: 0;
+  visibility: hidden;
+  animation: showKey 0.5s 0.5s paused ease-out forwards;
+}
+svg.key {
+  height: 164px;
+  width: 164px;
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  animation: showKey 0.5s 0.5s paused ease-out forwards;
+}
+.ghost {
+  /* border: 1px solid tomato; */
+  position: absolute;
+  bottom: 5px;
+  left: calc(50% - 100px);
+  width: 200px;
+  height: 200px;
+  animation: hoverGhost calc(var(--animation-duration)/2) ease-in-out 2;
+
+}
+.ghost:before {
+  content: var(--animation-sentence);
+  color: var(--color-theme);
+  border-radius: 50%;
+  position: absolute;
+  bottom: 100%;
+  text-align: center;
+  line-height: 2;
+  padding: 1rem;
+  visibility: hidden;
+  opacity: 0;
+  animation:
+    showText calc(var(--animation-duration)/8) calc(var(--animation-duration)*3/16) ease-out forwards,
+    showNewText calc(var(--animation-duration)/8) calc(var(--animation-duration)*27/40) ease-out forwards,
+    showFinalText calc(var(--animation-duration)/8) var(--animation-duration) ease-out forwards;
+
+}
+@keyframes hoverGhost {
+  25% {
+    transform: translateX(20vw);
+  }
+  75% {
+    transform: translateX(-20vw);
+  }
 }
 
-h1 { 
-	text-transform: uppercase;
-	background: repeating-linear-gradient(
-  45deg,
-  #f6d200 ,
-  #f6d200  10px,
-  #181617  10px,
-  #181617  20px
-);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	/*animation: move 5s ease infinite;*/
-	font-size: 384px;
-	margin: 0;
-	line-height: .7;
-	position: relative;
-	&:before,
-	&:after{
-		content: "Caution";
-			background-color: #f6d200;
-			color: #181617;
-			border-radius: 10px;
-			font-size: 35px;
-			position: absolute;
-			padding: 31px;
-			text-transform: uppercase;
-			font-weight: bold;
-			-webkit-text-fill-color: #181617;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%) rotate(20deg);
-	}
-	&:before {
-		content: "";
-		padding: 70px 130px;
-		background: repeating-linear-gradient(45deg, #f6d200, #f6d200 10px, #181617 10px, #181617 20px);
-		box-shadow: 0px 0px 10px #181617;
-	}
-	& span:before,
-	& span:after{
-		content: "";
-			width: 8px;
-			height: 8px;
-			background: #757575;
-			color: #757575;
-			border-radius: 50%;
-			position: absolute;
-			bottom: 0;
-			margin: auto;
-			top: 20%;
-			z-index: 3;
-			box-shadow: 0px 60px 0 0px;
-	}
-	span:before {
-		left: 37%;
-    transform: rotate(22deg);
-    top: -44%;
-	}
-	span:after {
-		right: 34%;
-    transform: rotate(22deg);
-    top: 3%;
-	}
+@keyframes showKey {
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+@keyframes showText {
+  2% {
+    opacity: 1;
+    visibility: visible;
+  }
+  98% {
+
+    opacity: 1;
+    visibility: visible;
+  }
+  99% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+  }
+}
+@keyframes showNewText {
+  2% {
+    opacity: 1;
+    visibility: visible;
+  }
+  98% {
+
+    opacity: 1;
+    visibility: visible;
+  }
+  99% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+  }
+}
+@keyframes showFinalText {
+  2% {
+    opacity: 1;
+    visibility: visible;
+  }
+  98% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 </style>
 </head>
 <body>
-  <h1 class="text"><span>403</span></h1>    
+  <svg style="display: none;">
+  <symbol id="keyhole" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 26.458333 26.458334"><g transform="translate(0 -270.542)"><circle cx="13.229" cy="279.141" r="8.599" fill="#f1eedb" paint-order="stroke fill markers"/><path d="M10.516 283.271h5.427c1.164 0 1.768.861 2.102 1.802l3.59 10.125c.334.94-.937 1.802-2.102 1.802H6.926c-1.165 0-2.437-.861-2.103-1.802l3.59-10.125c.334-.94.938-1.802 2.103-1.802z" fill="#f1eedb" paint-order="stroke fill markers"/><circle r="6.06" cy="279.141" cx="13.229" fill="#282b24" paint-order="stroke fill markers"/><path d="M11.502 283.76h3.455c.741 0 1.126.733 1.338 1.534l2.286 8.614c.213.8-.597 1.534-1.338 1.534H9.216c-.742 0-1.551-.733-1.339-1.534l2.286-8.614c.212-.8.597-1.534 1.339-1.534z" fill="#282b24" paint-order="stroke fill markers"/></g></symbol>
+  <symbol id="key" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 26.458333 26.458334"><circle cx="13.229" cy="279.141" r="8.599" paint-order="stroke fill markers" transform="matrix(0 -.76923 .7499 0 -202.882 23.405)" fill="#f1eedb"/><circle r="8.599" cy="279.141" cx="13.229" paint-order="stroke fill markers" transform="matrix(0 -.5887 .57392 0 -153.756 21.017)" fill="#282b24"/><path fill="#f1eedb" paint-order="stroke fill markers" d="M12.03 12.13h14.428v2.2H12.03z"/><path fill="#f1eedb" paint-order="stroke fill markers" d="M18.147 12.13h2.895v6.772h-2.895zM22.113 12.13h2.716v5.065h-2.716z"/></symbol>
+  <symbol id="ghost" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 26.458333 26.458334"><g transform="translate(0 -270.542)"><path d="M4.63 279.293c0-4.833 3.85-8.751 8.6-8.751 4.748 0 8.598 3.918 8.598 8.75H13.23zM4.725 279.293h16.914c.052 0 .19.043.19.096l-.095 14.329c0 .026-.011.05-.028.068a.093.093 0 0 1-.067.028c-.881 0-1.235-1.68-2.114-1.616-.995.072-1.12 2.082-2.114 2.154-.88.064-1.233-1.615-2.115-1.615-.881 0-1.233 1.615-2.114 1.615-.881 0-1.233-1.615-2.114-1.615-.882 0-1.236 1.679-2.115 1.615-.994-.072-1.12-2.082-2.114-2.154-.88-.063-1.41 1.077-2.114 1.616-.021.016-.05-.01-.067-.028a.097.097 0 0 1-.028-.068v-14.33c0-.052.042-.095.095-.095z" fill="#f1eedb" paint-order="stroke fill markers"/><path d="M15.453 281.27a1.987 1.94 0 0 1-.994 1.68 1.987 1.94 0 0 1-1.987 0 1.987 1.94 0 0 1-.994-1.68h1.988z" fill="#282b24" paint-order="stroke fill markers"/><g fill="#282b24" transform="matrix(1 0 0 1.0177 .283 -5.653)"><ellipse cx="10.205" cy="278.668" rx="1.231" ry="1.181" paint-order="stroke fill markers"/><ellipse ry="1.181" rx="1.231" cy="278.668" cx="16.159" paint-order="stroke fill markers"/><ellipse ry=".331" rx=".853" cy="280.936" cx="10.205" opacity=".5" paint-order="stroke fill markers"/><ellipse cx="16.159" cy="280.936" rx=".853" ry=".331" opacity=".5" paint-order="stroke fill markers"/></g><ellipse ry=".614" rx="8.082" cy="296.386" cx="13.229" opacity=".1" fill="#f1eedb" paint-order="stroke fill markers"/></g></symbol>
+</svg>
+<div class="container">
+  <h1>403</h1>
+  <p>Unauthorized</p>
+</div>
+<div class="ghost">
+  <svg class="ghost">
+    <use href="#ghost"/>
+  </svg>
+</div> 
 </body>
 </html>
