--- a/x1d4m7b3/index.html
+++ b/x1d4m7b3/index.html
@@ -28,7 +28,7 @@ body {
 }
 .container {
   text-align: center;
-  margin: 1rem 0.5rem 0;
+  margin: 7rem 0.5rem 0;
 }
 .container h1 {
   font-family: var(--font-header);
@@ -63,8 +63,8 @@ svg.key {
   left: calc(50% - 100px);
   width: 200px;
   height: 200px;
-  animation: hoverGhost calc(var(--animation-duration)/2) ease-in-out 2;
-
+  animation: hoverGhost 15s linear infinite;
+  margin: 0rem 0.5rem 70px;	
 }
 .ghost:before {
   content: var(--animation-sentence);
