--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -328,7 +328,7 @@
         class="text-4xl font-bold mb-4 text-center" 
         :onclick="waitTime === 0 ? 'location.reload()' : null">
         <span class="w-6 h-6 bg-sky-800 rounded-full"></span>
-        <span>الدليل الشامل لمشاهدة المحقق كونان</span>
+        <!-- <span>الدليل الشامل لمشاهدة المحقق كونان</span> -->
     </h1>
         <br>
 
