--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@ svg.key {
     opacity: 0;
     visibility: hidden;
   }
+@media (max-width: 768px) {
+  .ghost {
+    width: 25vw;
+  }
+}	
 }
 </style>
 </head>
