--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
     }
     .ghost {
       position: absolute;
-      bottom: 5%;
+      bottom: 15%;
       left: 50%;
       transform: translateX(-50%);
-      width: 15vw; /* Adjusts with viewport width */
-      height: auto; /* Maintains aspect ratio */
+      width: 15vw;
+      height: auto;
       animation: hoverGhost 15s linear infinite;
     }
 
     @media (max-width: 768px) {
       .ghost {
-        width: 25vw; /* Smaller size for smaller screens */
+        width: 25vw;
       }
     }
 
