--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </svg>
   <div class="container">
     <h1>403</h1>
-    <p>Unauthorized</p>
+    <p>Forbidden</p>
   </div>
   <div class="ghost">
     <svg class="ghost">
