--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4481,7 +4481,7 @@
 
                     // If currentPage is smaller or equal to totalPages, keep it the same
                     if (this.currentPage <= this.totalPages) {
-                        this.currentPage = this.currentPage;
+                        this.currentPage = 1;
                     }
                     // If currentPage is greater than totalPages, set it to the last page
                     else {
