--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4485,7 +4485,7 @@
                     }
                     // If currentPage is greater than totalPages, set it to the last page
                     else {
-                        this.currentPage = this.totalPages;
+                        this.currentPage = 1;
                     }
                 },
                 normalizeText(text) {
