--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -225,10 +225,9 @@
                             showValidationBody();
                         }
                     })
-                    .catch(() => {
-                        // Handle the error case, maybe log it or display a different message
-                        console.error("Error during initial token validation.");
-                    });
+                    .catch(() => console.error("Error during initial token validation."));
+            } else {
+                //showValidationBody();
             }
         });
     </script>          
