--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -28,7 +28,6 @@
                     console.log(`Cookie not found: ${name}`);
                     return null;
                 }
-
         
                 let AreTheUserJoinToTheChannel = getCookie('AreTheUserJoinToTheChannel');
         
@@ -5493,7 +5492,7 @@
                 loadData() {
                     const areJoined = getCookie('AreTheUserJoinToTheChannel');
 
-                    if (areJoined) {
+                    if (areJoined && areJoined.trim() !== '') {
                         // Reset states before attempting to fetch
                         this.episodes = [];
                         this.error = null;
@@ -6243,7 +6242,7 @@
             },
             mounted() {
                 const areJoined = getCookie('AreTheUserJoinToTheChannel');
-                if (areJoined) {
+                if (areJoined && areJoined.trim() !== '') {
                     this.loadData();
                 }
                 window.addEventListener('click', (event) => {
