--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -18,8 +18,8 @@
                     const cookies = document.cookie.split(';');
                     for (let i = 0; i < cookies.length; i++) {
                         let cookie = cookies[i].trim();
-                        // Check if this cookie starts with the desired name
-                        if (cookie.startsWith(`${name}=`)) {
+                        // Does this cookie string begin with the name we want?
+                        if (cookie.startsWith(name + '=')) {
                             const value = decodeURIComponent(cookie.substring(name.length + 1));
                             console.log(`Cookie found: ${name}=${value}`);
                             return value;
