--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -118,11 +118,24 @@
                 function showValidationBody() {
                     document.body.innerHTML = `
                         <div style="text-align: center; padding: 20px;">
-                            <div class="flex flex-col items-center" style="margin-bottom: 20px;">
-                                <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" class="icon-pointer" title="Channel">
-                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/TelegramChannel.png" alt="Channel" class="h-12 w-12">
-                                    <span class="text-center m-1 font-bold text-lg block">القناة</span>
-                                </a>
+                            <div class="flex flex-col items-center justify-center" style="margin-bottom: 50px;">
+                                <div class="flex items-center">
+                                    <div class="flex flex-col items-center">
+                                        <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" class="icon-pointer" title="Channel">
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/TelegramChannel.png" alt="Channel" class="h-12 w-12">
+                                            <span class="text-center m-1 font-bold text-lg block">القناة</span>
+                                        </a>
+                                    </div>
+                            
+                                    <div class="w-12"></div>
+
+                                    <div class="flex flex-col items-center">
+                                        <a href="https://t.me/DCRef_bot" target="_blank" rel="noopener noreferrer" class="icon-pointer" title="Bot">
+                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/TelegramBot.png" alt="Bot" class="h-12 w-12">
+                                            <span class="text-center m-1 font-bold text-lg block">البوت</span>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                             <h1 style="font-size: 18px; font-weight: bold;">لست منضماً إلى القناة. الرجاء الانضمام والذهاب إلى البوت للحصول على رمز التفعيل.</h1>
                             <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 20px; font-size: 18px; font-weight: bold;">
