--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6257,6 +6257,8 @@
 
             },
             mounted() {
+                this.areTheUserJoinToTheChannel = window.getCookie('AreTheUserJoinToTheChannel');
+                console.log("Cookie value in mounted:", this.areTheUserJoinToTheChannel);
                 const areJoined = window.getCookie('AreTheUserJoinToTheChannel');
                 if (areJoined && areJoined.trim() !== '') {
                     this.loadData();
