--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4,7 +4,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const MAX_ATTEMPTS = 3;
-            const LOCKOUT_DURATION = 60 * 1000; // 1 minute in milliseconds
+            const LOCKOUT_DURATION = 60 * 1000; // 1 minute in millisecondss
 
             // Function to set a cookie with an expiration date far in the future
             function setCookie(name, value) {
