--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2786,9 +2786,9 @@
                                         >
                                             ({{ manga.MangaFileSize }} MB) {{ manga.MangaNumber }}
                                             <img v-if="manga.status === 'success'" src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png"
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2 disabled:opacity-0" />
+                                                class="absolute right-0 top-0 w-6 h-6 ml-2 disabled:opacity-100" />
                                             <img v-if="manga.status === 'error'" src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png"
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2 disabled:opacity-0" />
+                                                class="absolute right-0 top-0 w-6 h-6 ml-2 disabled:opacity-100" />
                                         </button>
                                     </div>
                                 </fieldset>
@@ -2944,9 +2944,9 @@
                                         >
                                             {{ video.Resolution }} ({{ video.Size }} MB)
                                             <img v-if="video.status === 'success'" src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png" 
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2 disabled:opacity-0" />
+                                                class="absolute right-0 top-0 w-6 h-6 ml-2 opacity-100" />
                                             <img v-if="video.status === 'error'" src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" 
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2 disabled:opacity-0" />
+                                                class="absolute right-0 top-0 w-6 h-6 ml-2 opacity-100" />
                                         </button>
                                     </div>
                                 </fieldset>
