--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -2778,25 +2778,27 @@
                                     </legend>
                                     <div class="flex flex-col justify-center gap-4">
                                         <button
-                                            v-for="(manga, index) in selectedEpisode.EpisodeMangasIDs"
-                                            :key="manga.MangaNumber"
-                                            :disabled="manga.status === 'success'"
-                                            @click="() => { sendMangaToBot(manga.MangaFileID, manga.MangaNumber, index); }"
-                                            class="relative bg-green-500 text-white px-6 py-2 rounded hover:bg-green-700 flex items-center justify-center shadow-md disabled:opacity-50"
+                                          v-for="(manga, index) in selectedEpisode.EpisodeMangasIDs"
+                                          :key="manga.MangaNumber"
+                                          :disabled="manga.status === 'success'"
+                                          @click="() => { sendMangaToBot(manga.MangaFileID, manga.MangaNumber, index); }"
+                                          class="relative bg-green-500 text-white px-6 py-2 rounded hover:bg-green-700 flex items-center justify-center shadow-md disabled:opacity-50"
                                         >
-                                            ({{ manga.MangaFileSize }} MB) {{ manga.MangaNumber }}
-                                            <img
-                                                v-if="manga.status === 'success'"
-                                                src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png"
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2 opacity-100"
-                                            />
-                                            <img
-                                                v-if="manga.status === 'error'"
-                                                src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png"
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2 opacity-100"
-                                            />
+                                          ({{ manga.MangaFileSize }} MB) {{ manga.MangaNumber }}
+                                          <img 
+                                            v-if="manga.status === 'success'" 
+                                            src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png" 
+                                            class="absolute right-0 top-0 w-6 h-6 ml-2" 
+                                            style="opacity: 1;"
+                                          />
+                                          <img 
+                                            v-if="manga.status === 'error'" 
+                                            src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" 
+                                            class="absolute right-0 top-0 w-6 h-6 ml-2" 
+                                            style="opacity: 1;"
+                                          />
                                         </button>
-                                    </div>
+                                      </div>                                      
                                 </fieldset>
 
                                 <p v-if="selectedEpisode && selectedEpisode.EpisodeSeason !== ''" class="mb-2 text-lg">
